# bnn-tools

./: CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  compile.sh
cmake/Modules/: FindRapidjson.cmake
src/: BernoulliJudge.h  Chromosome.cpp  Chromosome.h  LinkerMutator.h  Mutator.cpp  Mutator.h  StringDecoder.h  StringEncoder.h  main.cpp
src/Decoder/: Decoder.cpp  Decoder.h  main.cpp
src/Encoder/: EncoderBuffer.cpp  EncoderBuffer.h  main.cpp
src/GeneMutator/: GeneMutator.cpp  GeneMutator.h  main.cpp
src/Miner/: main.cpp
src/Mutator/: BernoulliJudge.cpp  HeaderDecoder.cpp  HeaderDecoder.h  LinkGene.cpp  LinkGene.h  LinkerMutator.cpp  Mutator.cpp  Mutator.h  StringDecoder.cpp  main.cpp
src/Network/: AbstractActionMaker.cpp  AbstractActionMaker.h  BreakoutActionMaker.cpp  BreakoutActionMaker.h  NeuralChamber.cpp  NeuralChamber.h  NeuralConstructInterface.h  NeuralInputInterface.h  NeuralLinkContainer.cpp  NeuralLinkContainer.h  NeuralLinkContainerInterface.h  NeuralOutputInterface.h  Neuron.cpp  Neuron.h  VisualInputer.cpp  VisualInputer.h
src/RandomGenerator/: Generator.cpp  Generator.h  main.cpp
src/Util/: Chromosome.cpp  Chromosome.h  StringEncoder.cpp
test/: CMakeLists.txt  test.sh  testBernoulliJudge.cpp  testBreakoutActionMaker.cpp  testChromosome.cpp  testDecoder.cpp  testGenerator.cpp  testHeaderDecoder.cpp  testLinkGene.cpp  testLinkerMutator.cpp  testMutator.cpp  testNeuralChamber.cpp  testNeuralLinkContainer.cpp  testNeuron.cpp  testStringDecoder.cpp  testStringEncoder.cpp  testVisualInputer.cpp
